# FluentMeet

./: .env.example  .env.prod.example  .gitignore  Dockerfile  README.md  alembic.ini  alembic_output.txt  docker-compose.prod.yml  docker-compose.yml  fail_log.txt  hosting-spoken-on-digitalocean.md  issue.md  linting_issue.md  main.py  mypy_output.txt  pyproject.toml  pytest_refresh.txt  refresh-token.md  requirements.txt  ruff_errors.txt  test_output.txt  test_output_full.txt
.github/: issue-labeler.yml  labeler.yml  owasp-suppressions.xml
.github/scripts/: db.sh  run.sh
.github/workflows/: ci.yml  code-quality.yml  codeql.yml  dependency-check.yml  deploy.yml  labeler.yml  release.yml  stale.yml
alembic/: env.py
alembic/versions/: 092f1a489931_add_meeting_model.py  11781e907181_initial_migration.py  19dc9714d9ea_add_email_verification_model.py  24fa3a084826_add_google_id_to_users.py  4b4b6b5d1c2a_add_verification_tokens_table.py  4e7d4d5e7661_add_user_role_column.py  7f066a8213a8_change_user_id_to_uuid.py  a37ad6ed5842_create_rooms_participants_and_.py  a9a4f2fb79b5_create_rooms_participants_and_.py  b3eb2b8ac7ed_add_avatar_url_to_users.py  c10f646cb60e_add_passwordresettoken.py  e1a664780dc6_add_meeting_model.py
app/: __main__.py  cli.py  main.py
app/api/v1/endpoints/: auth.py
app/auth/: account_lockout.py  constants.py  dependencies.py  models.py  router.py  schemas.py  service.py  token_store.py  verification.py
app/core/: circuit_breaker.py  config.py  dependencies.py  error_responses.py  exception_handlers.py  exceptions.py  init_admin.py  rate_limiter.py  sanitize.py  security.py
app/crud/: __init__.py  auth_verification_api.md  user.py  verification_token.py
app/crud/user/: user.py
app/db/: __init__.py  session.py
app/external_services/cloudinary/: api-docs.md  config.py  constants.py  exceptions.py  schemas.py  service.py
app/external_services/deepgram/: __init__.py  api-docs.md  api_docs.md  config.py  service.py  streaming.py
app/external_services/deepgram_tts/: __init__.py  config.py  service.py
app/external_services/deepl/: __init__.py  api-docs.md  config.py  service.py
app/external_services/elevenlabs_stt/: __init__.py  config.py  service.py  streaming.py
app/external_services/elevenlabs_tts/: __init__.py  config.py  service.py
app/external_services/openai_tts/: __init__.py  api-docs.md  api_docs.md  config.py  service.py
app/external_services/voiceai/: __init__.py  api-docs.md  api_docs.md  config.py  service.py  websocket_streaming.py
app/kafka/: __init__.py  api-docs.md  consumer.py  exceptions.py  manager.py  producer.py  schemas.py  topics.py
app/meeting/: constants.py  dependencies.py  models.py  repository.py  router.py  schemas.py  service.py  state.py  ws_dependencies.py  ws_router.py
app/models/: __init__.py  base.py  user.py  verification_token.py
app/modules/auth/: account_lockout.py  api-docs.md  api_docs.md  constants.py  dependencies.py  models.py  oauth_google.py  router.py  schemas.py  service.py  token_store.py  verification.py
app/modules/meeting/: api-docs.md  api_docs.md  constants.py  dependencies.py  models.py  repository.py  router.py  schemas.py  service.py  state.py  ws_dependencies.py  ws_router.py
app/modules/user/: api-docs.md  api_docs.md  constants.py  dependencies.py  router.py  schemas.py  service.py
app/routers/: api.py
app/schemas/: api-docs.md  auth.py  pipeline.py  user.py
app/services/: account_lockout.py  audio_bridge.py  auth_verification.py  connection_manager.py  email_consumer.py  email_producer.py  stt_worker.py  token_store.py  translation_worker.py  tts_worker.py
app/user/: dependencies.py  router.py  schemas.py  service.py
docs/: email_service.md  testing.md
github-issues/: sample-issue.md
infra/: docker-compose.yml
issues/: ai_audio_processing.md  change-password.md  forgot-password.md  google-oauth.md  logout.md  meeting_management.md  password-reset.md  realtime_audio_captioning.md  room_management.md  user_profile.md  websockets_signaling.md
scripts/: introduction.raw  output.raw  test_audio_client.py  voiceai_output.raw
templates/email/: meeting_invite.html  password_changed.html  password_reset.html  verification.html
tests/: test_error_handling.py  test_main.py
tests/external_services/: test_elevenlabs_stt.py  test_elevenlabs_tts.py
tests/meeting/: test_meeting_router.py  test_meeting_service.py  test_meeting_state.py  test_ws.py  test_ws_router.py
tests/test_auth/: test_auth_change_password.py  test_auth_forgot_password.py  test_auth_login.py  test_auth_logout.py  test_auth_refresh.py  test_auth_reset_password.py  test_auth_signup.py  test_email_verification.py  test_oauth_google.py  test_oauth_service.py  test_schemas_user.py  test_verification_token_crud.py
tests/test_core/: test_sanitize.py  test_security.py
tests/test_kafka/: test_consumer.py  test_email_consumer.py  test_email_producer_service.py  test_pipeline.py  test_producer.py  test_schemas.py  test_stt_streaming.py
tests/test_user/: __init__.py  test_storage_service.py  test_user_endpoints.py  test_user_service.py
