[project]
name = "FluentMeet"
version = "1.18.11"
requires-python = ">=3.11"
dependencies = [
    "aioboto3==15.5.0",
    "aiobotocore==2.25.1",
    "aiofiles==25.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aioitertools==0.13.0",
    "aiokafka==0.13.0",
    "aiosignal==1.4.0",
    "alembic==1.18.4",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "async-timeout==5.0.1",
    "asyncpg==0.31.0",
    "attrs==25.4.0",
    "bcrypt==5.0.0",
    "black==26.3.1",
    "boto3==1.40.61",
    "botocore==1.40.61",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.5",
    "click==8.3.1",
    "cloudinary==1.44.1",
    "colorama==0.4.6",
    "coverage==7.13.4",
    "cryptography==48.0.0",
    "deepgram-sdk==7.2.0",
    "deprecated==1.3.1",
    "distro==1.9.0",
    "dnspython==2.8.0",
    "ecdsa==0.19.1",
    "email-validator==2.3.0",
    "fastapi==0.135.1",
    "fastapi-cli==0.0.24",
    "fastapi-cloud-cli==0.15.0",
    "fastar==0.8.0",
    "frozenlist==1.8.0",
    "greenlet==3.3.2",
    "h11==0.16.0",
    "hiredis==3.3.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "idna==3.11",
    "iniconfig==2.3.0",
    "isort==8.0.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "jiter==0.13.0",
    "jmespath==1.1.0",
    "librt==0.8.1",
    "limits==5.8.0",
    "mailgun2==2.0.1",
    "mako==1.3.10",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "multidict==6.7.1",
    "mypy==1.19.1",
    "mypy-extensions==1.1.0",
    "openai==2.26.0",
    "packaging==26.0",
    "passlib==1.7.4",
    "pathspec==1.0.4",
    "platformdirs==4.9.4",
    "pluggy==1.6.0",
    "propcache==0.4.1",
    "psycopg2-binary==2.9.11",
    "pyasn1==0.6.2",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-extra-types==2.11.0",
    "pydantic-settings==2.13.1",
    "pygments==2.19.2",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "python-jose==3.5.0",
    "python-multipart==0.0.22",
    "pytokens==0.4.1",
    "pyyaml==6.0.3",
    "redis==7.4.0",
    "requests==2.32.5",
    "resend==2.23.0",
    "rich==14.3.3",
    "rich-toolkit==0.19.7",
    "rignore==0.7.6",
    "rsa==4.9.1",
    "ruff==0.15.6",
    "s3transfer==0.14.0",
    "sentry-sdk==2.54.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "slowapi==0.1.9",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.48",
    "starlette==0.52.1",
    "tqdm==4.67.3",
    "typer==0.24.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uvicorn==0.41.0",
    "watchfiles==1.1.1",
    "websockets==16.0",
    "wrapt==1.17.3",
    "yarl==1.23.0",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    "alembic",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.11
target-version = "py311"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable all `E` and `F` codes by default.
# See: https://docs.astral.sh/ruff/rules/
select = ["B", "E", "F", "I", "W", "C90", "UP", "ASYNC", "PT", "ARG", "PTH", "SIM", "PLE", "PLW", "RUF"]
ignore = [
    "B008", # Do not perform implicit string concatenation, use explicit concatenation instead.
    "D100", # Missing docstring in public module
    "D101", # Missing docstring in public class
    "D104", # Allow missing __init__.py docstring initially
    "S101", # Use of assert detected. The enclosed code will be removed when compiling to optimised bytecode.
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.isort]
profile = "black"
skip = ["alembic", "venv", ".venv"]

[tool.mypy]
python_version = "3.11"
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[[tool.mypy.overrides]]
module = [
    "sqlalchemy.*",
    "alembic.*",
    "uvicorn.*",
    "jose.*",
    "passlib.*",
    "slowapi.*",
    "cloudinary.*",
    "mailgun2.*",
    "resend.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
